--- a/styles/globals.css
+++ b/styles/globals.css
@@ -890,6 +890,10 @@ svg.h-6.w-6.shrink-0 {
   overflow: hidden;
 }
 
+.menu-item-open {
+  overflow: unset;
+}
+
 @media screen and (max-width: 1536.1px) {
   .flight-img {
     width: 650px;
