--- a/styles/globals.css
+++ b/styles/globals.css
@@ -789,6 +789,37 @@ input[type='checkbox']:checked {
   width: 4.4rem;
 }
 
+.offer-box {
+  position: absolute;
+  left: -130px;
+  top: -40px;
+  transform: rotate(-45deg);
+  padding: 55px 80px 5px;
+  width: 300px;
+  height: 120px;
+}
+
+.offer-box img.offer-img {
+  transform: rotate(38deg);
+  width: 37px;
+  height: 30px;
+}
+
+.info-ic {
+  transform: rotate(46deg);
+}
+
+.toster-modal {
+  transition: all 300ms ease-in-out;
+  z-index: 999;
+  width: 350px;
+  right: -500px;
+}
+
+.toster-modal.right-6 {
+  right: 40px !important;
+}
+
 /* accordion css */
 
 .divide-y.divide-gray-200.border-gray-200.dark\:divide-gray-700.dark\:border-gray-700.rounded-lg.border {
@@ -1087,13 +1118,14 @@ svg.h-6.w-6.shrink-0 {
 
 @media screen and (max-width: 381.1px) {
   .gallery-images {
-    width: 200px;
-    height: 300px;
-    margin: 0 auto 30px auto !important;
+    width: 140px;
+    height: 220px;
+    margin: 0 5px;
   }
 
-  .gallery-images:nth-child(1) {
-    margin-left: auto !important;
+  .gallery-images:nth-child(2),
+  .gallery-images:nth-child(4) {
+    margin-top: 10px;
   }
 }
 
