--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,9 +24,6 @@
 }
 
 
-
-
-
 @media (min-width: 320px) {
   .container {
     max-width: 100%;
@@ -814,15 +811,47 @@ input[type='checkbox']:checked {
   transform: rotate(46deg);
 }
 
-.toster-modal {
+.toaster-modal {
   transition: all 300ms ease-in-out;
   z-index: 999;
   width: 350px;
   right: -500px;
 }
 
-.toster-modal.right-6 {
+.toaster-modal.right-6 {
   right: 40px !important;
+}
+
+.toaster-modal.success {
+  width: Hug (194px);
+  height: Hug (40px);
+  top: 20px;
+  left: 20px;
+  padding: 12px, 16px, 12px, 16px;
+  border-radius: 4px;
+  border: 1px;
+  gap: 4px;
+  border: 1px solid #34C759;
+  box-shadow: 0px 5px 20px 0px #00000026;
+  color: #34C759;
+  background: linear-gradient(0deg, #D6F4DE, #D6F4DE),
+  linear-gradient(0deg, #34C759, #34C759);
+}
+
+.toaster-modal.error {
+  width: Hug (194px);
+  height: Hug (40px);
+  top: 20px;
+  left: 20px;
+  padding: 12px, 16px, 12px, 16px;
+  border-radius: 4px;
+  border: 1px;
+  gap: 4px;
+  background: linear-gradient(0deg, #FFEBEA, #FFEBEA),
+  linear-gradient(0deg, #FF3B30, #FF3B30);
+  border: 1px solid #FF3B30;
+  box-shadow: 0px 5px 20px 0px #00000026;
+  color: #FF3B30;
 }
 
 /* accordion css */
